@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-26T16:17:56Z",
-  "count_outdated" : 295,
-  "uniques_outdated" : 153,
-  "count" : 326,
+  "timestamp" : "2022-05-27T00:58:45Z",
+  "count_outdated" : 298,
+  "uniques_outdated" : 154,
+  "count" : 328,
   "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
